Fix 'jumping scrollbar' issue using only CSS
See https://aykevl.nl/2014/09/fix-jumping-scrollbar

--- a/databrowser/src/index.css
+++ b/databrowser/src/index.css
@@ -2,11 +2,18 @@
 @tailwind components;
 @tailwind utilities;
 
+html {
+  margin-left: calc(100vw - 100%);
+}
+
 body {
   @apply text-gray-900;
   height: 100vh;
   width: 100%;
-  font-family: 'SourceSansPro', ui-sans-serif, system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+  font-family: 'SourceSansPro', ui-sans-serif, system-ui, -apple-system,
+    BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, 'Noto Sans',
+    sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol',
+    'Noto Color Emoji';
 }
 
 #app {
